@@ -1,3 +1,14 @@
+2000-03-18  Miguel de Icaza  <miguel@helixcode.com>
+
+	* gnome-config.c
+	(_gnome_config_get_translated_string_with_default): Load a value
+	if the translation is not available.  Fixes the desktop icons not
+	working and the launchers dissapearing.
+
+1999-08-26  Bertrand Guiheneuf <Bertrand.Guiheneuf@inria.fr>
+
+	* gnome-mime.c (add_to_key): Duplicate the mime key here.
+
 2000-02-24  Miguel de Icaza  <miguel@nuclecu.unam.mx>
 
 	* gnome-util.c (g_concat_dir_and_file): dir or file being NULL is
